<resources>
    <string name="app_name">Hypori_Marketing_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="system_requirements">System Requirements</string>
    <string name="available_as_both_an_on_premise_and_hosted_solution"> • Available as both an on-premise and hosted solution</string>
    <string name="hypori_client">Hypori Client</string>
    <string name="enterprise_class_solution">Enterprise Class Solution</string>
    <string name="hypori_informational_tool">Hypori Informational Tool</string>
    <string name="solution">solution</string>
    <string name="hypori">Hypori</string>
    <string name="hypori_sales_intelligentwaves_com">hypori.sales@intelligentwaves.com</string>
    <string name="hypori_logo_full">hypori_logo_full</string>
    <string name="native_mobile_experience">Native Mobile Experience</string>
    <string name="key_benefits">Key Benefits</string>
    <string name="the_hypori_client">The Hypori Client</string>
    <string name="the_hypori_solution">The Hypori Solution</string>
    <string name="native_mobile">Native Mobile Experience</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_w_hypori">phone_w_hypori</string>
    <string name="hypori_client_textview1">TextView1</string>
    <string name="zero_footprint_agentless_app_for_ios_and_android"> • Zero footprint, agentless app for iOS and Android</string>
    <string name="common_criteria_certified"> • Common Criteria certified</string>
    <string name="leverages_fips_140_2_crypto_and_tls_1_2_encryption"> • Leverages FIPS 140&#8211;2 crypto and TLS 1.2 encryption</string>
    <string name="supports_pki_credential_based_multi_factor_authentication"> • Supports PKI Credential based multi-factor authentication</string>
    <string name="virtual_mobile_devices_are_accessible_from_any_android_or_ios_device"> • Virtual mobile devices are accessible from any Android or iOS device</string>
    <string name="device_neutral">Device Neutral</string>
    <string name="hand_w_phone">hand_w_phone</string>
    <string name="agentless">Agentless</string>
    <string name="ensure_compliance_by_keeping_apps_and_data_secure_in_the_data_center"> • Ensure compliance by keeping apps and data secure in the data center</string>
    <string name="secure_platform">Secure Platform</string>
    <string name="secure_platform_image">secure_platform_image</string>
    <string name="enjoy_user_adoption_by_eliminating_the_need_for_intrusive_agents_and_big_brother_policies"> • Enjoy user adoption by eliminating the need for intrusive agents and ‘big brother’ policies</string>
    <string name="agentless_image">agentless_image</string>
    <string name="enterprise_identity_support_with_ad_ldap_integration"> • Enterprise identity support with AD/LDAP integration</string>
    <string name="delegated_admin_privileges_for_flexible_platform_management"> • Delegated admin privileges for flexible platform management</string>
    <string name="supports_enterprise_class_storage_integration_including_nas_and_san_storage"> • Supports enterprise-class storage integration, including NAS and SAN storage</string>
    <string name="centralized_control_and_management_of_the_mobile_experience"> • Centralized control and management of the mobile experience</string>
    <string name="supports_third_party_monitoring_and_management_tools"> • Supports third-party monitoring and management tools</string>
    <string name="single_virtual_os_to_develop_test_and_support"> • Single virtual OS to develop, test, and support</string>
    <string name="rich_sensor_integration_including_screen_orientation_gps_bluetooth_and_more"> • Rich sensor integration, including screen orientation, GPS, Bluetooth, and more</string>
    <string name="dynamic_h_264_encoding_and_audio_video_optimizations_for_improved_multimedia_experience"> • Dynamic H.264 encoding and audio/video optimizations for improved multimedia experience</string>
    <string name="performance_optimized_remote_mobile_experience"> • Performance-optimized remote mobile experience</string>
    <string name="hypori_solution_image">hypori_solution_image</string>
    <string name="virtual_mobile_infrastructure">Virtual Mobile Infrastructure</string>
    <string name="vmi_info">Our Virtual Mobile Infrastructure (VMI) platform streams any mobile app to any device. All the apps run on servers in the secure data center, never leaving data or applications at rest on the physical end point. Even if your device is lost, data and apps can\'t be compromised.</string>
    <string name="compute_memory_and_storage_for_on_premise_solutions_vary_based_on_the_specific_needs_of_each_organization">• Compute, memory, and storage for on-premise solutions vary based on the specific needs of each organization</string>
    <string name="contact_hypori_to_estimate_on_premise_requirements_and_costs">• Contact Hypori to estimate on-premise requirements and costs</string>
    <string name="intelligent_waves_llc">Intelligent Waves LLC</string>
    <string name="contact">Contact</string>
    <string name="contact_about_hypori">Contact About Hypori</string>
    <string name="hypori_is_available_as_both_and_on_premise_and_hosted_solution_compute_memory_and_storage_for_on_premise_solutions_vary_based_on_the_specific_needs_of_each_organization">Hypori is available as both and on-premise and hosted solution. Compute, memory, and storage for on-premise solutions vary based on the specific needs of each organization.</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="_1801_robert_fulton_drive">1801 Robert Fulton Drive</string>
    <string name="reston_va_20191">Reston, VA 20191</string>
    <string name="suite_440">Suite 440</string>
    <string name="_571_313_1963">571.313.1963</string>
    <string name="address">Address</string>
    <string name="fax">Fax</string>
    <string name="_703_766_7999">703.766.7999</string>
    <string name="sdvosb">sdvosb</string>
    <string name="int_waves_logo_w_waves_black">int_waves_logo_w_waves_black</string>
    <string name="intelligent_waves_llc_is_a_service_disabled_veteran_owned_small_business_that_specializes_in_providing_information_technology_it_and_communications_support_to_a_wide_variety_of_u_s_government_customers_we_provide_cutting_edge_it_networking_and_services_design_execution_and_sustainment">Intelligent Waves LLC is a service-disabled, Veteran Owned Small business that specializes in providing information technology (IT) and communications support to a wide variety of U.S. government customers. We provide cutting edge IT Networking and Services design, execution, and sustainment.</string>
    <string name="since_2006_intelligent_waves_llc_has_been_providing_information_technology_it_and_communications_support_to_a_wide_variety_of_u_s_government_customers_our_boots_on_the_ground_experience_along_with_our_technical_expertise_enables_us_to_identify_document_and_develop_mission_critical_it_and_communications_solutions">Since 2006, Intelligent Waves LLC has been providing information technology (IT) and communications support to a wide variety of U.S. government customers. Our boots on the ground experience—along with our technical expertise—enables us to identify, document, and develop mission-critical IT and communications solutions.</string>
    <string name="our_mission">Our Mission</string>
    <string name="iw_star">iw_star</string>
    <string name="enterprise_level_of_concern_with_potential_mobile_security_issues">Enterprise Level of Concern with Potential Mobile Security Issues</string>
    <string name="idg_research">IDG Research</string>
    <string name="enterprise_stats">enterprise_stats</string>
    <string name="hypori_phone">hypori_phone</string>
    <string name="hypori_enables_secure_managed_access_to_controlled_enterprise_resources_via_byod_or_uncontrolled_commercial_devices">• Hypori enables secure, managed access to controlled enterprise resources via BYOD or uncontrolled commercial devices.</string>
    <string name="the_hypori_client_is_a_mobile_thin_client_app_developed_and_available_on_both_android_and_ios_platforms_that_provides_access_to_the_hypori_device">The Hypori Client is a mobile thin client app developed and available on both Android and iOS platforms that provides access to the Hypori Device.</string>
    <string name="hypori_virtual_mobile_device">Hypori Virtual Mobile Device</string>
    <string name="the_hypori_virtual_mobile_device_is_a_virtual_mobile_platform_that_runs_on_a_server_it_functions_just_like_a_physical_smartphone_or_tablet_except_the_operating_system_data_and_apps_reside_and_run_on_a_server_instead_of_a_physical_device">The Hypori Virtual Mobile Device is a virtual mobile platform that runs on a server. It functions just like a physical smartphone or tablet, except the operating system, data, and apps reside and run on a server instead of a physical device.</string>
    <string name="hypori_admin_console">Hypori Admin Console</string>
    <string name="the_hypori_admin_console_is_a_web_application_that_can_be_used_to_monitor_and_configure_the_hypori_platform_including_hypori_servers_virtual_devices_and_users">The Hypori Admin Console is a web application that can be used to monitor and configure the Hypori platform, including Hypori servers, virtual devices, and users.</string>
    <string name="components_of_the_vmi_platform">Components of the VMI Platform</string>
    <string name="lock">lock</string>
    <string name="hypori_by_intelligent_waves_represents_a_new_and_comprehensive_approach_to_enterprise_mobility_management_and_mobile_device_management_hypori_virtualizes_the_entire_mobile_experience_moving_everything_that_matters_into_a_managed_and_secure_environment">Hypori by Intelligent Waves represents a new and comprehensive approach to Enterprise Mobility Management and Mobile Device Management. Hypori virtualizes the entire mobile experience – moving everything that matters into a managed and secure environment.</string>
    <string name="hypori_mitigates_the_risk_of_data_at_rest_from_both_mobile_android_and_ios_platforms">Hypori mitigates the risk of data at rest from both mobile Android and iOS platforms.</string>
    <string name="want_to_try_hypori_for_free_for_30_days_press_the_button_below_to_download_the_app_and_start">Want to try Hypori for free for 30 days? Press the button below to download the app and start!</string>
    <string name="_30_day_free_trial">30 Day Free Trial</string>
    <string name="hypori_is_already_being_adopted_by_customers_such_as_the_department_of_homeland_security_and_the_u_s_special_operations_command">Hypori is already being adopted by customers such as the Department of Homeland Security and the U.S. Special Operations Command.</string>
    <string name="gear">gear</string>
    <string name="star">star</string>
    <string name="hypori_enables_secure_managed_access_to_controlled_enterprise_resources_via_byod_or_uncontrolled_commercial_devices_no_dot">Hypori enables secure, managed access to controlled enterprise resources via BYOD or uncontrolled commercial devices.</string>
    <string name="hypori_is_the_only_nsa_csfc_approved_virtual_smartphone_solution">• Hypori is the only NSA CSfC approved virtual smartphone solution.</string>
    <string name="contact_us">Contact Us</string>
    <string name="hypori_support">Hypori Support</string>
    <string name="hypori_support_intelligentwaves_com">hypori.support@intelligentwaves.com</string>
    <string name="_844_279_4357">844.279.4357</string>
    <string name="_8am_5pm_cst">8am – 5pm CST</string>
    <string name="hypori_sales">Hypori Sales</string>
</resources>