<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/key_benefits_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#b41518"
        android:padding="10dp"
        android:text="@string/key_benefits"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/benefits_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/key_benefits_header">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/device_neutral_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_neutral"
                android:textColor="#767782"
                android:textSize="35sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/device_neutral_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/virtual_mobile_devices_are_accessible_from_any_android_or_ios_device"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/device_neutral_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/hand_w_phone"
                app:srcCompat="@drawable/device_neutral" />

            <TextView
                android:id="@+id/secure_platform_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secure_platform"
                android:textColor="#767782"
                android:textSize="35sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/only_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/hypori_is_the_only_nsa_csfc_approved_virtual_smartphone_solution"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/secure_platform_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/ensure_compliance_by_keeping_apps_and_data_secure_in_the_data_center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/supports_pki_credential_based_multi_factor_authentication"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/leverages_fips_140_2_crypto_and_tls_1_2_encryption"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/secure_platform_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/secure_platform_image"
                app:srcCompat="@drawable/secure_platform" />

            <TextView
                android:id="@+id/agentless_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agentless"
                android:textColor="#767782"
                android:textSize="35sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/agentless_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/enjoy_user_adoption_by_eliminating_the_need_for_intrusive_agents_and_big_brother_policies"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/zero_footprint_agentless_app_for_ios_and_android"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/agentless_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/agentless_image"
                app:srcCompat="@drawable/agentless" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>